--- a/tarot/Resource.resx
+++ b/tarot/Resource.resx
@@ -172,6 +172,9 @@
   <data name="cups_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\cups_14.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lightingEffect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\tumblr_odczwtBEcN1runoqyo5_540.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="major_chariot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\major_chariot.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
